# SNPythonSDK

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  env.example  pyproject.toml  run_examples.py  setup.cfg  setup.py
cba_signnow/: __init__.py  config.py  document.py  link.py  oauth2token.py  webhook.py
examples/: 02_create_template.py  03_template_invite.py  05_template_invite_multiple_roles.py  08_embedded_signing_link.py  09_request_payment_invite.py  101_invite_webhook_download.py  11_add_fillable_fields.py  12_upload_with_text_tags.py  17_download_signed_document.py  20_request_access_token.py  21_free_form_invite.py  22_document_share_link.py  25_embedded_invite.py  __init__.py  auth_check_example.py  bulk_invite_example.py  document_get_example.py  document_group_invite_example.py  document_group_recipients_example.py  document_group_template_example.py  document_group_template_recipients_example.py  document_prefill_text_field_example.py  document_upload_example.py  documents_example.py  download_document_example.py  download_document_group_example.py  embedded_editor_document_example.py  embedded_editor_document_group_example.py  embedded_group_invite_example.py  embedded_invite_example.py  embedded_sending_document_example.py  embedded_sending_document_group_example.py  field_invite_example.py  folder_example.py  folder_root_example.py  free_form_invite_example.py  link_example.py  preset_data.py  signing_link_example.py  template_example.py  (+3 more)
samples/: 02_create_template.py  03_template_invite.py  05_template_invite_multiple_roles.py  07_signing_link.py  08_embedded_signing_link.py  09_request_payment_invite.py  11_add_fillable_fields.py  12_upload_with_text_tags.py  17_download_signed_document.py  20_request_access_token.py  21_free_form_invite.py  22_document_share_link.py  23_document_merge.py  (+1 more)
(+280 files in other folders)
